[selectors] Using a modifier key on an element makes it stop matching :focus-visible https://bugs.webkit.org/show_bug.cgi?id=225075

Reviewed by Ryosuke Niwa.

LayoutTests/imported/w3c:

* web-platform-tests/css/selectors/focus-visible-021-expected.txt: Added.
* web-platform-tests/css/selectors/focus-visible-021.html: Added.

Source/WebCore:

When we used a modifier key on a element that was matching :focus-visible, we stopped matching :focus-visible.
That was wrong, we shouldn't just start matching :focus-visible when a modifier key is used but not the other way around.

This patches fixed that without doing any work if the element is already matching :focus-visible when the user type a key.

Test: imported/w3c/web-platform-tests/css/selectors/focus-visible-021.html

* dom/Element.cpp:
(WebCore::shouldAlwaysHaveFocusVisibleWhenFocused): Helper method for inputs and content editable elements.
(WebCore::Element::setFocus): Use the new helper method.
(WebCore::Element::setHasFocusVisible): Add asserts to avoid setting/unsetting :focus-visible flag wrongly.
* dom/Node.cpp:
(WebCore::Node::isContentEditable const): Just mark as const.
(WebCore::Node::isContentRichlyEditable const): Ditto.
* dom/Node.h: Ditto.
* page/EventHandler.cpp:
(WebCore::EventHandler::internalKeyEvent): Don't do anything regarding :focus-visible flag if the element already matches :focus-visible.

LayoutTests:

* platform/ios/TestExpectations: Skip new test.


Canonical link: https://commits.webkit.org/237112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276698 268f45cc-cd09-0410-ab3c-d52691b4dbfc