Source/WebCore/page/EventHandler.cpp
@@ -3543,16 +3543,15 @@ bool EventHandler::internalKeyEvent(const PlatformKeyboardEvent& initialKeyEvent
         keydown->preventDefault();
     keydown->setTarget(element);
 
-    auto shouldMatchFocusVisible = [initialKeyEvent, keydown](const Element& element) {
-        if (!element.focused())
-            return false;
-
+    auto setHasFocusVisibleIfNeeded = [initialKeyEvent, keydown](Element& element) {
         // If the user interacts with the page via the keyboard, the currently focused element should match :focus-visible.
         // Just typing a modifier key is not considered user interaction with the page, but Shift + a (or Caps Lock + a) is considered an interaction.
-        return keydown->modifierKeys().isEmpty() || ((keydown->shiftKey() || keydown->capsLockKey()) && !initialKeyEvent.text().isEmpty());
+        bool userHasInteractedViaKeyword = keydown->modifierKeys().isEmpty() || ((keydown->shiftKey() || keydown->capsLockKey()) && !initialKeyEvent.text().isEmpty());
+
+        if (element.focused() && userHasInteractedViaKeyword)
+            element.setHasFocusVisible(true);
     };
-    // FIXME: This is wrong for text form controls and contenteditable elements (https://webkit.org/b/225075).
-    element->setHasFocusVisible(shouldMatchFocusVisible(*element));
+    setHasFocusVisibleIfNeeded(*element);
 
     if (initialKeyEvent.type() == PlatformEvent::RawKeyDown) {
         element->dispatchEvent(keydown);
@@ -3599,12 +3598,10 @@ bool EventHandler::internalKeyEvent(const PlatformKeyboardEvent& initialKeyEvent
     // Focus may have changed during keydown handling, so refetch element.
     // But if we are dispatching a fake backward compatibility keypress, then we pretend that the keypress happened on the original element.
     if (!keydownResult) {
-        element->setHasFocusVisible(false);
         element = eventTargetElementForDocument(m_frame.document());
         if (!element)
             return false;
-        // FIXME: This is wrong for text form controls and contenteditable elements (https://webkit.org/b/225075).
-        element->setHasFocusVisible(shouldMatchFocusVisible(*element));
+        setHasFocusVisibleIfNeeded(*element);
     }
 
     PlatformKeyboardEvent keyPressEvent = initialKeyEvent;
